--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,19 @@
   <body>
 
     <%= yield %>
+
+		<footer class="footer">
+      <div class="container">
+      	<div class="row">
+        	<div class="text-muted col-6">
+        		&copy; 2017
+        	</div>
+        	<div class="text-muted col-6">
+        		A <a href="https://github.com/MiguelBee"> M.A. Bustamante</a> creation. 
+        	</div>
+        </div>
+      </div>
+    </footer>
+  
   </body>
 </html>
