--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,2 +1,4 @@
-<%= @results %>
-<%= link_to "Give it Another Spin",  root_path %>
+<div class="result_box">
+	<%= @results %>
+	<%= link_to "Give it Another Spin",  root_path %>
+</div>
