debugged modal links

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,14 +1,13 @@
 <div class="hero">
-  <h1 class="title"> <strong class="first_letter">i</strong>	MPROMPTUOUS </h1>
-  
+  <h1 class="title"> <strong class="first_letter">i</strong>	MPROMPTUOUS &nbsp;<span> &#8480;<span></h1>
   <br >
   <br >
   
   <!--modal trigger buttons-->
   <div class="row">
-    	<%= link_to "Delivery?", delivery_path, class: "btn btn-success btn-lg", data: {toggle: 'modal', target: '#delivery'} %>
+    	<%= link_to "Delivery?", "#", class: "btn btn-success btn-lg", data: {toggle: 'modal', target: '#delivery'} %>
     		<p><strong> Choose Your Preference</strong> </p>
-    	<%= link_to "Eat Out?", eat_out_path, class: "btn btn-success btn-lg", data: {toggle: 'modal', target: '#eatOut'} %>
+    	<%= link_to "Eat Out?", "#", class: "btn btn-success btn-lg", data: {toggle: 'modal', target: '#eatOut'} %>
   </div>
   <br >
   <h2><u> For the bold and daring</u> </h2>
