replaced modal buttons for Heroku

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,9 +5,13 @@
   
   <!--modal trigger buttons-->
   <div class="row">
-    	<%= link_to "Delivery?", "#", class: "btn btn-success btn-lg", data: {toggle: 'modal', target: '#delivery'} %>
+    	<button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#delivery">
+    		Delivery?
+			</button>
     		<p><strong> Choose Your Preference</strong> </p>
-    	<%= link_to "Eat Out?", "#", class: "btn btn-success btn-lg", data: {toggle: 'modal', target: '#eatOut'} %>
+    	<button type="button" class="btn btn-success btn-lg" 	data-toggle="modal" data-target="#eatOut">
+    		Eat Out?
+			</button>
   </div>
   <br >
   <h2><u> For the bold and daring</u> </h2>
