--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,5 +1,5 @@
 <div class="hero">
-  <h1 class="title"> <strong class="first_letter">i</strong>	MPROMPTUOUS &nbsp;<span> &#8480;<span></h1>
+  <h1 class="title"> <strong class="first_letter">i</strong>MPROMPTUOUS<span> &#8480;</span></h1>
   <br >
   <br >
   
@@ -37,35 +37,24 @@
 </div>
 
     <!--delivery Modal -->
-    <div class="modal fade" id="delivery" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal fade" id="delivery" tabindex="-1" role="dialog" aria-labelledby="deliveryLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">Let's See Who's deliverying</h4>
+            <h4 class="modal-title" id="myModalLabel">Let's see who is delivering near you!</h4>
           </div>
-            <%= simple_form_for Order.new, url: create_delivery_path do |f| %>
           <div class="modal-body">
-          	<%= f.input :address1, placeholder: 'Enter Your Address' %>
-  					<%= f.input :city, placeholder: 'Enter Your City' %>
-  					<%= f.input :state, placeholder: 'Enter your state' %>
+            <%= render "delivery_form" %>
           </div>
-        
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <%= f.submit 'Let\'s see who\'s delivering' %>
-          </div>
-          
-          <% end %>
-          
         </div>
       </div>
     </div>
 
     <!--eatOut Modal -->
-    <div class="modal fade" id="eatOut" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="eatOut" tabindex="-1" role="dialog" aria-labelledby="eatOutLabel" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -74,19 +63,11 @@
             </button>
             <h4 class="modal-title" id="myModalLabel">Let's find eateries by you</h4>
           </div>
-            <%= simple_form_for Order.new, url: create_eat_out_path do |f| %>
           <div class="modal-body">
-				  	<%= f.input :zipcode, placeholder: "What is your zipcode?" %>
-				  	<%= f.input :radius, placeholder: "Within what radius?(25 Miles Max)" %>
+            <%= render "eat_out_form" %>
           </div>
-        
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <%= f.submit "Let's see what happens"  %>
-          </div>
-          
-          <% end %>
-          
         </div>
       </div>
     </div>
+
+
