--- a/app/views/orders/eat_out.html.erb
+++ b/app/views/orders/eat_out.html.erb
@@ -14,7 +14,8 @@
 			<%= "#{@random_choice['location']['city']}" %>
 			<%= "#{@random_choice['location']['zip_code']}" %>
 		<img src=<%= "#{@random_choice['image_url']}" %>>
-		<h3> Be Bold !</h3>
+		<h3> Be Bold !</h3><br />
+		<h4> Check out what people are saying <%= link_to "here", "#{@random_choice['url']}" %></h4>
 </div>
 <div class="clear"/></div>
 <div class="btn btn-success">
