--- a/app/views/orders/eat_out.html.erb
+++ b/app/views/orders/eat_out.html.erb
@@ -13,7 +13,7 @@
 			<%= "#{@random_choice['location']['address1']}" %><br/>
 			<%= "#{@random_choice['location']['city']}" %>
 			<%= "#{@random_choice['location']['zip_code']}" %>
-		<img src=<%= "#{@random_choice['image_url']}" %>>
+		<img src=<%= "#{@random_choice['image_url']}" %>, class="randomChoicepic">
 		<h3> Be Bold !</h3><br />
 		<h4> Check out what people are saying <%= link_to "here", "#{@random_choice['url']}" %></h4>
 </div>
