--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -72,7 +72,7 @@ p {
   /*background-color: #f5f5f5;*/
 }
 
-img {
+.randomChoicepic {
 	border-radius: 100%;
 	display: block;
   margin: auto;
@@ -92,4 +92,10 @@ img {
 	text-align: center;
 	font-family: 'Fontdiner Swanky', cursive;
 	background-color: #ffbb00;
+}
+
+.yelpLogo {
+	height: 50px;
+	width: 60px;
+	margin-bottom: 10px;
 }
