--- a/app/views/orders/_delivery_form.html.erb
+++ b/app/views/orders/_delivery_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @order, url: create_delivery_path do |f| %>
    	<%= f.input :address1, placeholder: 'Enter Your Address' %>
 		<%= f.input :city, placeholder: 'Enter Your City' %>
-		<%= f.input :state, placeholder: 'Enter your state' %>
+		<%= f.input :state, placeholder: 'Enter your state', error: 'State is mandatory' %>
   <div class="modal-footer">
     <%= f.submit 'Let\'s see who\'s delivering' %>
   </div>
