--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,7 +8,7 @@
             <%= link_to image_tag('yelp.png', alt: "Yelp logo",  class: "yelpLogo"), 'https://www.yelp.com/', target: "_blank" %>
           </div>
         	<div class="text-muted col-md-4">
-        		A <a target="_blank", href="http://mabustamante.getforge.io/"> M.A. Bustamante</a> creation. 
+        		A <a target="_blank", href="http://mabustamante.getforge.io/", target: "_blank"> M.A. Bustamante</a> creation. 
         	</div>
         </div>
       </div>
